--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,11 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:3001/",
+	"private": true,
+	"proxy": "http://localhost:3001",
   "dependencies": {
     "axios": "^0.16.2",
+    "http-proxy-middleware": "^0.19.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
