--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"nodemon": "^1.11.0"
 	},
 	"dependencies": {
+		"aws-sdk": "^2.387.0",
 		"axios": "^0.16.2",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.18.3",
@@ -34,6 +35,8 @@
 		"express-session": "^1.15.6",
 		"if-env": "^1.0.4",
 		"mongoose": "^5.0.17",
+		"multer": "^1.4.1",
+		"multer-s3": "^2.9.0",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
 		"react-redux": "^6.0.0",
