--- a/.env
+++ b/.env
@@ -1,10 +1,1 @@
-# Google keys
-clientID=NEED
-clientSecret=NEED
-
-# Session/Cookies keys
-secret=thisisasecretkey154894
-
-# keys for s3 bucket
-secretAccessKey=GqE/BL9eC0SOYAtqVYXpYy1QZRVxTHLw53xSPoYJ
-accessKeyId=AKIAIEWVA7CA4XILIEAA
+//test
