--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"multer-s3": "^2.9.0",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
+		"react-materialize": "^2.6.0",
 		"react-redux": "^6.0.0",
 		"redux": "^4.0.1"
 	},
