upload page css

--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
 	"proxy": "http://localhost:3001",
 	"dependencies": {
 		"axios": "^0.16.2",
+		"google-maps-react": "^2.0.2",
 		"http-proxy-middleware": "^0.19.1",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
