--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
 	"description": "AlleyArt",
 	"main": "server/server.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "cd client && npm run build",
+		"client": "cd client && npm run start",
+		"heroku-postbuild": "npm run build",
+		"install": "cd client && yarn install",
+		"server:dev": "nodemon server/server.js",
 		"start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
 		"start:prod": "node server/server.js",
-		"start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-		"client": "cd client && npm run start",
-		"seed": "node server/scripts/seedDB.js",
-		"install": "cd client && yarn install",
-		"build": "cd client && npm run build",
-		"heroku-postbuild": "npm run build"
+		"start:dev": "concurrently \"npm run server:dev\" \"npm run client\""
 	},
 	"repository": {
 		"type": "git",
